--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-allennlp==0.9.0
-overrides==1.9
-numpy==1.16.4
-pandas==0.24.2
-scripts==2.0
-scikit_learn==0.21.3
-typing==3.7.4
-pandas==0.24.2
-Click==7.0
-tqdm==4.32.1
-fuzzywuzzy==0.17.0
-spacy==2.1.6
-p_tqdm==1.2
-beautifulsoup4==4.8.0
-elasticsearch==7.0.2
+allennlp  #allennlp==0.9.0
+overrides #overrides==1.9
+numpy # numpy==1.16.4
+pandas # pandas==0.24.2
+scripts # scripts==2.0
+scikit_learn # scikit_learn==0.21.3
+typing # typing==3.7.4
+pandas #pandas==0.24.2
+Click # Click==7.0
+tqdm #tqdm==4.32.1
+fuzzywuzzy #fuzzywuzzy==0.17.0
+spacy #spacy==2.1.6
+p_tqdm #p_tqdm==1.2
+beautifulsoup4 #beautifulsoup4==4.8.0
+elasticsearch #elasticsearch==7.0.2
 ipdb
 python-intervals
